# tabtab

./: .clang-format  .clang-tidy  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  setup.sh
.claude/: settings.json  settings.local.json
.claude/commands/: close-handover.md  create-issue.md  create-release.md  fix-story.md  implement-story.md  plan-feature.md  process-feature.md  process-issue.md  sync-github.md  update-readme.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  sprint-task.yml
.github/workflows/: ci-builder.yml  ci-codegen.yml  ci-output.yml  release.yml
builder/: CMakeLists.txt
builder/cmake/: strip-modmap.cmake
builder/scripts/: fetch-skia.sh
builder/src/: main.cpp
builder/tests/: CMakeLists.txt  test_smoke.cpp
docs/_source/: README.md  TabTab_Architecture_Document.docx  TabTab_Code_Generation_Pipeline.docx  TabTab_Component_Library_Specification.docx  TabTab_Project_Bootstrap_Specification.md  TabTab_Signal_System_Specification.docx  TabTab_YAML_Schema_Specification.docx
docs/architecture/: architecture.md  code-generation.md  component-library.md  signal-system.md  yaml-schema.md
docs/reference/: compose-mapping.md  skia-guide.md  yaml-examples.md
docs/specs/features/core-result-type/: spec.md
docs/specs/features/infra-bootstrap/: implementation-plan.md  infra-handover.md  spec.md
docs/specs/features/signal-graph-foundations/: spec.md
docs/specs/requirements/: builder.md  codegen.md  infra.md  output.md
docs/specs/templates/: handover.md  investigation.md  story.md
docs/standards/: cicd-quality.md  coding-standards.md  tdd-guidelines.md
examples/customer-manager/: project.tt.yaml
examples/customer-manager/handlers/: CustomerHandlers.kt
examples/hello-world/: project.tt.yaml
examples/todo-app/: project.tt.yaml
output-template/: build.gradle.kts.template  settings.gradle.kts.template
scripts/: docx_to_md.py  init-github.sh
tests/codegen/: run_tests.py
